[project]
name = "nonechat"
description = "Awesome chat console using Textual"
authors = [
  {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
  "textual ~=0.29.0",
]
requires-python = ">=3.8, <4.0"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/nonebot/nonechat"
repository = "https://github.com/nonebot/nonechat"

[tool.pdm.dev-dependencies]
dev = [
  "isort ~=5.10",
  "black ~=23.1",
  "loguru>=0.7.0",
  "ruff ~=0.0.275",
  "nonemoji ~=0.1",
  "pre-commit ~=3.1"
]

[tool.pdm.build]
includes = ["nonechat"]

[tool.pdm.version]
source = "file"
path = "nonechat/__init__.py"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201"]

line-length = 88
target-version = "py38"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
