[project]
name = "nonechat"
description = "Awesome chat console using Textual"
authors = [
  {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "textual<4.0.0,>=3.7.0",
]
version = "0.4.3"
requires-python = ">=3.9, <4.0"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/nonebot/nonechat"
repository = "https://github.com/nonebot/nonechat"

[tool.pdm.dev-dependencies]
dev = [
    "isort==5.13.2",
    "black>=24.4.2",
    "loguru>=0.7.0",
    "ruff>=0.5.0",
    "nonemoji>=0.1",
    "pre-commit>=3.7.0",
]

[tool.pdm.build]
includes = ["nonechat"]

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
